nivasa-macros/tests/trybuild/validation_array_max_size_malformed.stderr
error: expected `#[array_max_size(<usize>)]`
 --> tests/trybuild/validation_array_max_size_malformed.rs:5:5
  |
5 |     #[array_max_size]
  |     ^
