nivasa-macros/tests/trybuild/validation_array_max_size_malformed.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct InvalidArrayMaxSizeArgsForm {
    #[array_max_size]
    tags: Vec<String>,
}

fn main() {}
